# ChangeTrail

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: GOOD_FIRST_ISSUES.md  RELEASE_v0.1.0.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_request.md
.github/workflows/: ci.yml
changetrail/: __init__.py  __main__.py  cli.py  demo.py
changetrail/api/: main.py  routes.py
changetrail/collectors/: registry.py
changetrail/collectors/github/: collector.py
changetrail/collectors/kubernetes/: collector.py
changetrail/core/: collector.py  config.py  models.py  normalizer.py  store.py
changetrail/integrations/: slack.py
helm/changetrail/: Chart.yaml  values.yaml
helm/changetrail/templates/: deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
tests/: test_demo.py  test_github_collector.py  test_models.py  test_normalizer.py  test_slack.py  test_store.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
ui/src/: App.tsx  api.ts  main.tsx  types.ts
ui/src/components/: Filters.tsx  Header.tsx  Timeline.tsx
